--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,9 +1,16 @@
-.tree-org-container {
-  display: inline-block;
+.zm-tree-org {
+  height: 100%;
   padding: 15px;
-  background-color: #fff;
+  position: relative;
+  .zoom-container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    text-align: center;
+    transform-origin: left top;
+  }
 }
-
 .tree-org {
   display: table;
   text-align: center;
@@ -126,6 +133,9 @@
   }
 }
 .tree-org > .tree-org-node {
+  display: flex!important;
+  flex-direction: column;
+  align-items: center;
   padding-top: 0;
   &:after {
     border-left: 0;
@@ -151,6 +161,9 @@
 }
 
 .horizontal {
+  & > .tree-org-node{
+    flex-direction: row;
+  }
   .tree-org-node {
     display: table-cell;
     float: none;
@@ -251,5 +264,73 @@
     & > .tree-org-node {
       display: block;
     }
+  }
+}
+.zm-tree-handle {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  .zm-tree-percent,
+  .zm-tree-handle-item {
+    width: 32px;
+    height: 32px;
+    user-select: none;
+    line-height: 32px;
+    font-size: 12px;
+    text-align: center;
+  }
+  .zm-tree-handle-item {
+    color: #999;
+    border: 1px solid #ddd;
+    cursor: pointer;
+    position: relative;
+    &:not(:last-child){
+      margin-bottom: 6px;
+    }
+    &.zoom-out {
+      margin-bottom: -1px;
+      border-bottom-color: transparent;
+      z-index: 2;
+    }
+    &:hover {
+      color: #2d8cf0;
+      background: #f0faff;
+      border-color: #2d8cf0;
+      .zm-tree-restore {
+        border-color: #2d8cf0;
+        &:after {
+          border-color: #2d8cf0;
+        }
+      }
+    }
+    .zm-tree-icon {
+      font-size: 18px;
+    }
+    .zm-tree-restore {
+      display: inline-block;
+      width: 10px;
+      height: 10px;
+      border: 1px solid #aaa;
+      &:after {
+        content: "";
+        display: block;
+        height: 100%;
+        border-top: 1px solid #aaa;
+        border-right: 1px solid #aaa;
+        transform: translate(3px, -3px);
+      }
+    }
+    .zm-tree-svg{
+      display: flex;
+      height: 100%;
+      justify-content: center;
+      align-items: center;
+      img {
+        width: 50%;
+        height: 50%;
+        vertical-align: middle;
+        opacity: 0.5;
+      }
+    } 
   }
 }
