--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -58,10 +58,22 @@
     &:not(:last-child):after {
       border-top: 1px solid #ddd;
     }
-
+    &-textarea {
+      width: 100%;
+      height: 100%;
+      position:absolute;
+      top: 0;
+      left: 0;
+      font-size: 14px;
+    }
     &-label {
       position: relative;
       display: inline-block;
+      user-select: none;
+      &.new-tree-org-node-label {
+        width: 50px;
+        height: 100px;
+      }
       .tree-org-node-label-inner {
         padding: 10px 15px;
         text-align: center;
