修复一些问题

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,4 @@
-@import url("//at.alicdn.com/t/font_2201426_wnqkpnyga1.css");
+// @import url("//at.alicdn.com/t/font_2201426_wnqkpnyga1.css");
 .zm-tree-org {
   height: 100%;
   padding: 15px;
@@ -168,6 +168,7 @@
 .tree-org-node__children {
   display: table;
   padding-top: 20px;
+  width: 100%;
   &:before {
     content: '';
     position: absolute;
