--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -78,7 +78,7 @@
       position: relative;
       display: inline-block;
       user-select: none;
-      &.is-new {
+      &.is-empty.is-edit {
         width: 50px;
         height: 100px;
       }
