增加默认展开层级

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -105,6 +105,7 @@
       border-radius: 50%;
       box-shadow: 0 0 2px rgba(0, 0, 0, .15);
       cursor: pointer;
+      color: #666;
       transition: all .35s ease;
       &.expanded {
         margin-left: -10px;
