--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -18,6 +18,10 @@
     overflow: hidden;
     text-align: center;
     transform-origin: left top;
+    &.is-center {
+      display: flex;
+      justify-content: center;
+    }
   }
 }
 .tree-org {
